# tiny-agent

./: .gitignore  ASSESSMENT-TINY-AGENT-VS-AIDER.md  CHANGELOG.md  Dockerfile  EXAMPLES_UNIX_IO.sh  LICENSE  Makefile  QUICKSTART.md  README.md  UNIX_IO.md  agent.py  agent.sh  agent_api.py  agent_cli.py  agent_core.py  cli_commands.py  commands.json  config.yaml.example  docker-compose.yml  dockerignore  env.example  example-client.py  pyproject.toml  requirements.txt  run-agent.sh  setup.sh  test-api.sh  test_agent_api.py  version.py
examples/: README.md
examples/analyze-codebase/: README.md  commands.json
examples/data-processing/: README.md  commands.json
examples/devops-tasks/: README.md  commands.json
examples/log-analysis/: README.md  commands.json
templates/: README.md
templates/basic/: file-operations.json  system-info.json  text-processing.json
templates/data/: api-tools.json  csv-tools.json  json-tools.json
templates/development/: docker-tools.json  git-tools.json  python-tools.json
templates/devops/: log-analysis.json  monitoring-tools.json
workspace/: README.md  data2.txt  example.py
