[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-agent"
dynamic = ["version"]
description = "A minimal CLI agent that executes tasks using command-line tools"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "tiny-agent contributors"}
]
keywords = ["agent", "llm", "cli", "automation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/cgast/tiny-agent"
Repository = "https://github.com/cgast/tiny-agent"
Issues = "https://github.com/cgast/tiny-agent/issues"
Changelog = "https://github.com/cgast/tiny-agent/blob/main/CHANGELOG.md"

[project.scripts]
tiny-agent = "agent_cli:main"
tiny-agent-api = "agent_api:main"

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "version"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
